feat: (Font) 新增字体“得意黑“

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,13 @@
 @font-face {
-    font-family: 'ZCOOL KuHei';
-    src: url('/fonts/ZCOOLKuHei-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
+  font-family: 'ZCOOL KuHei';
+  src: url('/fonts/ZCOOLKuHei-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SmileySans-Oblique';
+  src: url('/fonts/SmileySans-Oblique.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
